<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.android.queiros.igor.petscare.LoginActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtEsqueceuSenha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:onClick="Cadastro"
            android:text="Cadastrar-se"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/txtEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:onClick="esqueceuSenha"
            android:text="Esqueci a senha"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/login_textView_app_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_header_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="122dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imageView_Logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/login_textView_app_nome"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            app:srcCompat="@drawable/petscare"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="-73dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtSenha"
            android:layout_alignStart="@+id/edtSenha"
            android:layout_below="@+id/edtSenha"
            android:background="@color/btn_login"
            android:onClick="Logar"
            android:text="@string/login_button_login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/edtEmailRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/login_textView_app_nome"
            android:layout_alignStart="@+id/login_textView_app_nome"
            android:layout_below="@+id/login_textView_app_nome"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/login_plainText_usuario"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/login_textView_app_nome"
            android:layout_alignStart="@+id/edtEmailRec"
            android:layout_below="@+id/edtEmailRec"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/login_passwordText_senha"
            android:inputType="textPassword" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
